<resources>
    <string name="app_name">Restouran </string>
    <string name="b_hamzanwadi">UNIVERSITAS HAMZANWADI</string>
    <string name="b_fakultas_teknik">Fakultas Teknik</string>
    <string name="b_teknik_informatika">Teknik Informatika</string>
    <string name="b_diyawan">Diyawan</string>
    <string name="m_coktail">Coktail</string>
    <string name="m_indinesian_food">Masakan Indonesia</string>
    <string name="m_mocktail">Mocktail</string>
    <string name="m_westren_food">Masakan Barat</string>
    <string name="m_timur_tengah_food">Makan Timur Tengah</string>
    <string name="d_daftar_menu">DAFTAR MENU</string>
    <string name="name_dark">Dark and Stormy</string>
    <string name="bahan_dark">Bahan\n . 2 ons. rum gelap\n • 3 ons. bir jahe\n • 1/2 ons. air jeruk nipis (opsional)</string>
    <string name="des_dark">Petunjuk arah \n Isi gelas tinggi dengan es batu. Tambahkan rum, lalu tuangkan bir jahe dan air jeruk nipis. Aduk dengan sendok bar. Hiasi dengan irisan jeruk nipis.</string>
    <string name="name_French_75">French 75</string>
    <string name="bahan_French_75">Bahan \n • 2 ons. Gin kering London\n • 1 sdt. gula halus\n • 1/2 ons. jus lemon\n • 5 ons. sampanye kasar</string>
    <string name="des_French_75">Petunjuk arah \n Kocok gin, gula, dan jus lemon dengan baik dengan es pecah-pecah dalam pengocok koktail dingin. Saring ke dalam gelas Collins setengah penuh es retak. Tutup dengan sampanye.</string>
    <string name="name_Boulevardier">Boulevardier</string>
    <string name="bahan_Boulevardier">Bahan \n • 1 1/2 ons. wiski bourbon atau gandum hitam\n • 3/4 ons. Campari\n • 3/4 ons. vermouth manis</string>
    <string name="des_Boulevardier">Petunjuk \n Aduk bahan dengan es dalam gelas pencampur sampai dingin. Saring ke dalam gelas coupe. Hiasi dengan twist oranye.</string>
    <string name="name_body_mary">Bloody Mary</string>
    <string name="bahan_body_mary">Bahan \n Campuran\n • 1/2 c. jus tomat\n • 1/4 inci lobak, cincang\n • 1 sdt. Saus Worcestershire\n • sejumput biji seledri\n • 4 saus pedas (Tabasco, Tapatio, dll.)\n • 1/2 jus lemon, perasan segar\n • 1/2 jus jeruk nipis, perasan segar\n • sejumput garam laut\n • sejumput lada hitam\n • 1 sdm. vodka\n • 2 ons. vodka\n • 6-8 ons. Bloody Mary mix</string>
    <string name="des_body_mary">Petunjuk arah \n Blender jus tomat, lobak, Worcestershire, dan biji seledri sampai halus. Tambahkan saus pedas, air jeruk lemon, air jeruk nipis, garam, dan merica, lalu haluskan. Sesuaikan campurannya tergantung pada seberapa pedas, asin, atau jeruk yang Anda suka. Tambahkan 1 sdm. vodka untuk menstabilkan campuran dan menjaga jus tetap segar, lalu haluskan. Campurkan 6-8 ons. campuran dengan 2 oz. vodka ke dalam gelas dengan es. Tuang bolak-balik ke gelas lain 3 atau 4 kali untuk mencampur, lalu hiasi sesuka Anda.</string>
    <string name="name_gimlate">Gimlet</string>
    <string name="bahan__gimlate">Bahan \n • 2 ons. Gin kering London\n • 2/3 ons. Air jeruk nipis mawar</string>
    <string name="cm__gimlate">Petunjuk arah \n Kocok bahan dalam pengocok koktail dengan es yang pecah. Saring ke dalam gelas koktail dingin, dan hiasi dengan jeruk nipis.</string>
    <string name="name_moscow_mule">Moscow Mule</string>
    <string name="bh_gimlate">Bahan\n • 2 ons. vodka\n • 4-6 ons. bir jahe\n • 1/2 ons. air jeruk nipis\n</string>
    <string name="cm_moscow_mule">Petunjuk arah\n Peras air jeruk nipis ke dalam mug Moscow Mule, lalu masukkan cangkang bekas. Tambahkan 2-3 es batu dan vodka, lalu isi dengan bir jahe.</string>
    <string name="nm_Aperol_Spritz">Aperol Spritz</string>
    <string name="bh_Aperol_Spritz">Bahan \n • 2 ons. Aperol\n • 3 ons. prosecco\n • 2 ons. (atau tambahan) soda klub\n • irisan jeruk</string>
    <string name="cm_Aperol_Spritz">Petunjuk Arah\n Buat Aperol, prosecco, dan soda klub dalam gelas anggur di atas es. Hiasi dengan irisan jeruk segar di dalam gelas.</string>
    <string name="nm_mojito">Mojito</string>
    <string name="bh_mojito">Bahan \n • 2 ons. rum putih\n • 1/2 ons. air jeruk nipis (diperas segar)\n • 1 sdt. gula halus\n • 3 daun mint\n • soda klub atau seltzer</string>
    <string name="cm_mojito">Petunjuk arah \n Dalam gelas Collins yang berukuran kecil, campurkan air jeruk nipis dengan 1/2 hingga 1 sdt. serbuk gula sangat halus. Tambahkan daun mint, haluskan di sisi gelas, lalu isi 2/3 gelas dengan es pecah dan tuangkan rum. Masukkan kulit jeruk nipis yang diperas dan tutup dengan soda klub atau seltzer.</string>
    <string name="nm_Margarita">Margarita</string>
    <string name="bh_Margarita">Bahan\n • 2 ons. tequila perak\n • 1 ons. Cointreau\n • 1 ons. air jeruk nipis\n • garam kasar untuk pinggirannya</string>
    <string name="cm_Margarita">Petunjuk arah\n Gosok tepi gelas koktail dingin dengan air jeruk nipis dan celupkan ke dalam garam kasar. Kocok tequila, Cointreau, air jeruk nipis, dan es dalam gelas pencampur, lalu saring ke dalam gelas asin di atas es.</string>
    <string name="nm_Whiskey_Sour">Whiskey Sour</string>
    <string name="bh_Whiskey_Sour">Bahan \n • 2 ons. bourbon atau gandum hitam\n • 2/3 ons. jus lemon\n • 1 sdt. gula halus\n • 1/2 putih telur</string>
    <string name="cm_Whiskey_Sour">Petunjuk arah\n Kocok bahan dengan baik dengan es yang pecah, saring ke dalam gelas koktail dingin, dan hiasi dengan irisan lemon dan/atau ceri maraschino.</string>
    <string name="nm_bulebery_mojito">BLUEBERY MOJITO</string>
    <string name="bg_bulebery_mojito">Bahan: \n 6 lembar daun mint\n  cup blueberry\n ¼ cup perasan jeruk nipis\n ¼ cup simple sirup\n 1 cup air soda\n Es batu secukupnya\n Cara membuat:</string>
    <string name="cm_bulebery_mojito">Cara membuat\n Masukkan blueberry dan daun mint ke dalam shaker, tumbuk kasar.\n Masukkan perasan jeruk nipis, simple sirup, dan es batu. Kocok sebentar.\n Tuangkan ke dalam gelas.\n Tambahkan air soda dan es batu. Hias dengan daun mint.</string>
    <string name="nm_nice_pear">NICE PEAR</string>
    <string name="bh_nice_pear">Bahan\n 250 ml jus pir\n 60 ml air lemon\n 2 sdm gula\n Air soda secukupnya\n Es batu secukupnya\n</string>
    <string name="cm__nice_pear">Cara membuat\n Campurkan semua bahan ke dalam shaker.\n Tuangkan ke dalam gelas dan beri air soda secukupnya.\n Hias dengan potongan buah pir di atasnya.</string>
    <string name="nm_pinepple_corbbler">PINEPPLE COBBLER</string>
    <string name="bh_pinepple_corbbler">Bahan:\n 60 ml jus stroberi\n 30 ml air lemon\n 100 ml jus nanas\n Air soda secukupnya\n Es batu secukupnya</string>
    <string name="cm__pinepple_corbbler">Cara membuat\n Masukkan jus nanas, jus stroberi, dan air lemon ke dalam shaker yang sudah di isi es. Kocok sebentar.\n Tuangkan ke dalam gelas. Tambahkan es batu dan air soda.\n Hias dengan irisan nanas dan lemon.</string>
    <string name="cm_holidy_sherly">HOLIDY SHIRLEY</string>
    <string name="bh_holidy_sherly">Bahan:\n ¼ cup jus jeruk\n ½ cup sprite\n 2 sdt simple syrup\n Buah ceri untuk garnish\n Es batu secukupnya</string>
    <string name="cm__holidy_sherly">Cara membuat: \n Tuang jus jeruk, simpe syrup, dan sprite ke dalam gelas. Aduk.\n Tambahkan es batu secukupnya. Aduk kembali.\n Garnish mocktail dengan buah ceri. Sajikan.</string>
    <string name="nm_Virgin_Watermelon_Margarita">Virgin Watermelon Margarita</string>
    <string name="bh_Virgin_Watermelon_Margarita">Bahan:\n 1 buah semangka ukuran sedang, potong-potong\n ½ cup perasan jeruk nipis\n 4 sdm jus nanas\n 1/3 cup air soda\n Es batu secukupnya</string>
    <string name="cm_Virgin_Watermelon_Margarita">Cara membuat:\n Haluskan buah semangka di dalam blender.\n Tambahkan perasan jeruk nipis dan jus nanas. Blender kembali.\n Tuangkan ke dalam pithcer yang sudah diberi es batu.\n Tambahkan air soda di atasnya. Beri potongan jeruk nipis. Sajikan.</string>
    <string name="nm_Rendang">Rendang</string>
    <string name="bh_Rendang">Bahan : \n 500 gram daging sapi, potong kotak jadi 8 atau 10 bagian\n 600 ml santan kental, dari satu setengah butir kelapa\n 5 sdm minyak goreng\n 300 ml air\n Bumbu halus:\n \n 10 buah cabai merah iris\n 6 butir bawah merah\n 3 siung bawah putih\n 3 cm kunyit\n 3 cm jahe\n 3 cm lengkuas\n 1 sdm garam\n 2lembar daun kunyit\n 1 batang serai\n 2 butir asam kandis\n Cara Membuat:</string>
    <string name="cm_Rendang">Cara Membuat \n Tumis bumbu hingga harum, masukkan daging, aduk hingga berubah warna.\n Masukkan daun kunyit, serai, dan asam kandis. Aduk perlahan.\n Masukkan air. Masak hingga air menyusut. Aduk perlahan sesekali.\n Masukkan santan, masak dengan api sedang.\n Biarkan hingga daging empuk, kuah kering, dan berminyak. Angkat, sajikan.</string>
    <string name="nm_Rawon">Rawon</string>
    <string name="bh_Rawon">Bahan: \n 500 gram daging sapi agak berlemak\n 2 liter air\n 3 batang serai, memarkan\n 3 cm lengkuas, memarkan\n 5 lembar daun jeruk\n 2 lembar daun salam\n 4 sdm minyak untuk menumis\n 2 tangkai daun bawang, potong-potong\n Bumbu halus:\n \n 5 butir bawang merah\n 3 siung bawang putih\n 2 butir kemiri\n 1 sdt ketumbar\n 2 cm jahe\n 2 cm kunyit\n 3 bh cabai merah (opsional)\n 4 bh keluwak tua, kukus, ambil isinya\n 2 sdt garam\n Pelengkap:\n \n Kerupuk udang\n 100 gram tauge pendek\n 4 butir telur asin\n Sambal\n</string>
    <string name="cm_Rawon">Cara Membuat \n Masak daging dengan api kecil\n Masukkan daun salam, serai, lengkuas, dan daun jeruk sampai daging empuk dan matang.\n Angkat daging, lalu potong kecil-kecil.\n Saring rebusan air daging, sisihkan bersama irisan daging.\n Haluskan semua bumbu halus, tumis sampai berbau harum.\n Angkat, lalu masukkan ke dalam kaldu daging.\n Masak dengan api kecil sampai mendidih kembali.\n Cicipi, apakah rasanya sudah pas.\n Masukkan daun bawang yang sudah dipotong, didihkan sebentar. rawon kedalam mangkuk, taburkan tauge pendek di atasnya.\n Sajikan bersama nasi hangat, telur asin dan sambal.</string>
    <string name="nm_Sate">Sate</string>
    <string name="bh_Sate">Bahan : \n 250 g fillet ayam, dipotong dadu, kemudian tusukan ke tusukan sate\n 1 buah jeruk nipis yang telah iris\n 100 ml minyak goreng\n 3 butir bawang merah, diiris tipis\n 5 sdm kecap manis\n nasi putih atau bisa diganti lontong secukupnya\n Bumbu kacang :\n \n 3 butir bawang putih\n 4 butir bawang merah\n 100 g kacang tanah, digoreng\n 2 butir kemiri\n garam secukupnya\n 150 ml air kaldu ayam\n 2 sdm minyak goreng\n Sambal:\n \n cabe merah kecil 15 buah\n bawang putih 4 siung\n garam secukupnya\n minyak goreng secukupnya</string>
    <string name="cm_Sate">Cara Membuat:\n Pembuatan bumbu kacang,  haluskan bawang putih, bawang merah, kacang tanah, garam, dan juga kemiri.\n  Tumis bumbu kacang hingga tercium bau harum, kemudian masukkan air kaldu dan selanjutnya masak sampai mengental lalu angkat. Sisihkan.\n Selanjutnya , campurkan 2 sendok makan bumbu kacang dengan ditambah 2 sendok makan kecap manis, lalu celupkan sate, kemudian bakar hingga setengah matang.\n Angkat lalu gulingkan lagi dalam bumbu, terus  bakar lagi hingga matang, angkat.\n Untuk sambal bawang,  Tumis bawang putih sampai setengah matang lalu angkat.\n Selanjutnya campur bawang putih ditambah juga cabe merah kecil, dan garam, haluskan.</string>
    <string name="nm_Tahu_Bacam">Tahu Bacam</string>
    <string name="bh_Tahu_Bacam">Bahan :\n 400 gram tempe/tahu, potong sesuai selera\n 800 ml air kelapa\n 100 gram gula merah, sisir\n 2 sdm kecap manis\n 1 lembar daun salam\n 1 cm lengkuas, memarkan\n ½ sdt garam\n minyak untuk menggoreng\n Haluskan :\n  \n 6 butir bawang merah\n 4 siung bawang putih\n ½ sdm ketumbar\n 3 batang serai, ambil putihnya</string>
    <string name="cm_Tahu_Bacam">Cara memasak: \n Ungkep atau rebus tempe bersama air kelapa, gula merah, kecap manis, daun salam, lengkuas, garam, dan bumbu halus sampai matang dan meresap. Biarkan dingin.\n Panaskan minyak, goreng di atas api sedang hingga kecokelatan.\n Angkat, tiriskan dan hidangkan.</string>
</resources>