<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/jm1"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4D000000"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btn_buka_ras_Coktail"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp"
                        android:layout_marginBottom="20dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/c_mojito" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="25dp"
                        android:layout_marginBottom="50dp"
                        android:background="#4D000000"
                        android:text="@string/m_coktail"
                        android:textColor="@color/white"
                        android:textSize="30dp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btn_buka_ras_Mocktail"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp"
                        android:layout_marginBottom="20dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/i_mie_goreng" />

                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="25dp"
                        android:layout_marginBottom="50dp"
                        android:background="#4D000000"
                        android:text="@string/m_indinesian_food"
                        android:textColor="@color/white"
                        android:textSize="30dp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btn_buka_ras_Indonesian_dood"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp"
                        android:layout_marginBottom="30dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/m_blueberry_mojito" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="25dp"
                        android:layout_marginBottom="50dp"
                        android:background="#4D000000"
                        android:text="@string/m_mocktail"
                        android:textColor="@color/white"
                        android:textSize="30dp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btn_buka_Wetren_food"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp"
                        android:layout_marginBottom="20dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/w_chiken_wern_blue" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="25dp"
                        android:layout_marginBottom="50dp"
                        android:background="#4D000000"
                        android:text="@string/m_westren_food"
                        android:textColor="@color/white"
                        android:textSize="30dp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btn_buka_Timur_Tengah"
                        android:layout_width="wrap_content"
                        android:layout_height="250dp"
                        android:layout_marginBottom="20dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/t_chis_tea" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="25dp"
                        android:layout_marginBottom="50dp"
                        android:background="#4D000000"
                        android:text="@string/m_timur_tengah_food"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </FrameLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Pindah"
        android:layout_gravity="bottom|right"
        android:clickable="true"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>